Adding the NavBar and SideBar in the dashboard

--- a/server/.env
+++ b/server/.env
@@ -1,1 +1,2 @@
-MONGO_URL=mongodb+srv://21114843:XO9WNWKNsEHVeV0V@cluster0.gklpdbf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+MONGO_URL='mongodb+srv://21114843:XO9WNWKNsEHVeV0V@cluster0.gklpdbf.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0'
+PORT= 5001
