--- a/client/package.json
+++ b/client/package.json
@@ -19,9 +19,11 @@
     "@nivo/core": "^0.84.0",
     "@nivo/geo": "^0.84.0",
     "@nivo/pie": "^0.84.0",
+    "@reduxjs/toolkit": "^2.2.1",
     "react": "^18.2.0",
     "react-datepicker": "^4.8.0",
     "react-dom": "^18.2.0",
+    "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2"
   },
   "devDependencies": {
